tests/ui/min_rust_version_attr.stderr
error[E0425]: cannot find value `x` in this scope
  --> $DIR/min_rust_version_attr.rs:77:5
   |
LL |     x >= 8 && x < 12;
   |     ^ not found in this scope

error[E0425]: cannot find value `x` in this scope
  --> $DIR/min_rust_version_attr.rs:77:15
   |
LL |     x >= 8 && x < 12;
   |               ^ not found in this scope

error[E0308]: mismatched types
  --> $DIR/min_rust_version_attr.rs:95:31
   |
LL |     let _ = std::mem::replace(s, String::default());
   |                               ^
   |                               |
   |                               expected `&mut _`, found struct `std::string::String`
   |                               help: consider mutably borrowing here: `&mut s`
   |
   = note: expected mutable reference `&mut _`
                         found struct `std::string::String`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0308, E0425.
For more information about an error, try `rustc --explain E0308`.
